<resources>
    <string name="app_name">AmmuccaDelivery</string>
    <string name="email_hint">Inserisci email</string>
    <string name="password_hint">Inserisci password</string>
    <string name="button_text_registazione">Registrazione</string>
    <string name="button_text_login">Login</string>
    <string name="password_hint_conferma">Conferma password</string>
    <string name="login">Login</string>
    <string name="checkout">Checkout</string>
    <string name="registrazione">Registrazione</string>
    <string name="menu_griglia">Menù a griglia</string>
    <string name="logo_shop">Shop</string>
    <string name="button_visual">Vedi menu</string>
    <string name="ristorante">Ristorante</string>
    <string name="mcdonalds">McDonald\'s</string>
    <string name="via_tib">Via Tiburtina</string>
    <string name="total">Totale</string>
    <string name="prova">Prova</string>
    <string name="pay">Pagamento</string>
    <string name="Conferma">confirm</string>
    <string name="confirm">conferma</string>
    <string name="remove_title">Are you sure?</string>
    <string name="be_careful">Be careful</string>
    <string name="cancel">Cancel</string>
</resources>
