<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login_menu"
        android:title="@string/login"/>
    <item
        android:id="@+id/register_menu"
        android:title="@string/registrazione"/>

    <item
        android:id="@+id/checkout_menu"
        android:title="@string/checkout"/>
    <item
        android:id="@+id/menu_griglia"
        android:title="@string/menu_griglia"
        app:showAsAction="ifRoom"
        android:icon="@drawable/griglianongriglia"/>

    <item
        android:id="@+id/menu_carello"
        app:showAsAction="ifRoom"
        android:title="@string/logo_shop"
        android:icon="@drawable/shopping_cart_white_"/>


</menu>