<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_ET"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_ET"
            android:hint="@string/password_hint"
            android:textSize="20dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_ET_conferma"
            android:hint="@string/password_hint_conferma"
            android:textSize="20dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registrazione_BT"
            android:clickable="true"
            android:enabled="false"
            android:text="@string/button_text_registazione"/>

    </LinearLayout>

</LinearLayout>